[package]
name = 'cord-runtime'
version = "0.8.0"
authors = ['Dhiway Networks <info@dhiway.com>']
build = 'build.rs'
edition = '2021'
license = "GPL-3.0"
homepage = "https://cord.network"
repository = "https://github.com/dhiway/cord"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive","max-encoded-len"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false  }
static_assertions = "1.1.0"

# primitives
cord-primitives = { package = "cord-primitives", path = "../primitives", default-features = false }
cord-runtime-constants = { package = "cord-runtime-constants", path = "./constants", default-features = false }
cord-utilities = { package = "cord-utilities", path = "../utilities", default-features = false }

sp-authority-discovery = {  git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42" }
sp-consensus-babe = {  git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42" }
sp-consensus-grandpa = {  git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42" }
sp-api = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
sp-inherents = { git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42" }
sp-offchain = { git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42" }
sp-std = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
sp-runtime = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
sp-staking = { git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42" }
sp-core = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
sp-io = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
sp-session = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
sp-version = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
sp-transaction-pool = {  git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42" }
sp-block-builder = {  git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42" }

pallet-authority-discovery = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
pallet-authorship = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
pallet-babe = { git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42" }
pallet-balances = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
pallet-transaction-payment = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42" }
pallet-collective = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
pallet-democracy = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
frame-executive = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
pallet-grandpa = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
pallet-identity = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
pallet-im-online = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
pallet-indices = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
pallet-membership = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
pallet-message-queue = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
pallet-multisig = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
pallet-offences = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
pallet-preimage = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
pallet-scheduler = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
pallet-session = {git = "https://github.com/dhiway/substrate", features = ["historical"], default-features = false, branch = "release-v0.9.42"}
pallet-sudo = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
frame-support = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
pallet-staking = { git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42" }
frame-system = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
frame-system-rpc-runtime-api = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
pallet-timestamp = {git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42"}
pallet-treasury = { git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42" }
pallet-utility = { git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42" }
pallet-remark = { git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.42" }
hex-literal = { version = "0.4.1", optional = true }

frame-benchmarking = { git = "https://github.com/dhiway/substrate",  default-features = false, optional = true, branch = "release-v0.9.42" }
frame-benchmarking-pallet-pov = { git = "https://github.com/dhiway/substrate",  default-features = false, optional = true, branch = "release-v0.9.42" }
frame-system-benchmarking = { git = "https://github.com/dhiway/substrate",  default-features = false, optional = true, branch = "release-v0.9.42" }
pallet-session-benchmarking = { git = "https://github.com/dhiway/substrate",  default-features = false, optional = true, branch = "release-v0.9.42" }
pallet-offences-benchmarking = { git = "https://github.com/dhiway/substrate",  default-features = false, optional = true, branch = "release-v0.9.42" }
frame-try-runtime = { git = "https://github.com/dhiway/substrate", default-features = false, optional = true, branch = "release-v0.9.42" }

pallet-did = {  default-features = false, path = '../pallets/did' }
pallet-did-names = {  default-features = false, path = '../pallets/did-name' }
pallet-schema = {  default-features = false, path = '../pallets/schema' }
pallet-registry = {  default-features = false, path = '../pallets/registry' }
pallet-stream = {  default-features = false, path = '../pallets/stream' }
pallet-unique = {  default-features = false, path = '../pallets/unique' }
pallet-extrinsic-authorship = {  default-features = false, path = '../pallets/authorship' }

# Internal runtime API (with default disabled)
pallet-did-runtime-api  = {package = "pallet-did-runtime-api", path = "../pallets/did/runtime-api", default-features = false}

[dev-dependencies]
hex-literal = "0.4.1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
keyring = { package = "sp-keyring", git = "https://github.com/dhiway/substrate", branch = "release-v0.9.42" }
separator = "0.4.1"
serde_json = "1.0.96"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/dhiway/substrate", optional = true, branch = "release-v0.9.42" }

[features]
default = ['std']
std = [
	"sp-authority-discovery/std",
  "cord-primitives/std",
	"pallet-offences-benchmarking?/std",
	"frame-system-benchmarking?/std",
  "cord-utilities/std",
	"pallet-session-benchmarking?/std",
  "codec/std",
	"scale-info/std",
	"sp-inherents/std",
	"sp-core/std",
	"sp-api/std",
	"sp-transaction-pool/std",
	"sp-block-builder/std",
	"sp-offchain/std",
	"sp-std/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"frame-benchmarking-pallet-pov/std",
	"frame-executive/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-collective/std",
	"pallet-democracy/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-message-queue/std",
	"pallet-multisig/std",
	"pallet-offences/std",
	"pallet-preimage/std",
	"pallet-scheduler/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"pallet-babe/std",
	"pallet-remark/std",
	"pallet-did/std",
	"pallet-did-names/std",
	"pallet-schema/std",
	"pallet-registry/std",
	"pallet-stream/std",
	"pallet-unique/std",
	"pallet-extrinsic-authorship/std",
	"pallet-did-runtime-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"sp-version/std",
	"log/std",
	"sp-consensus-babe/std",
	"sp-consensus-grandpa/std",
	"sp-session/std",
	"cord-runtime-constants/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",	
	"pallet-multisig/runtime-benchmarks",
	"pallet-offences/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-remark/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
  "cord-utilities/runtime-benchmarks",
	"pallet-did/runtime-benchmarks",
  "pallet-did-names/runtime-benchmarks",
  "pallet-schema/runtime-benchmarks",
  "pallet-stream/runtime-benchmarks",
  "pallet-registry/runtime-benchmarks",
  "pallet-extrinsic-authorship/runtime-benchmarks",
	"hex-literal",
	"frame-system-benchmarking/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-message-queue/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-babe/try-runtime",
  "pallet-schema/try-runtime",
  "pallet-stream/try-runtime",
  "pallet-did/try-runtime",
]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []

# When enabled, the runtime API will not be build.
disable-runtime-api = []

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = [
	"sp-api/disable-logging",
]
