[package]
name = 'cord-runtime'
version = "0.9.0"
authors = ['Dhiway Networks <info@dhiway.com>']
build = 'build.rs'
edition = '2021'
license = "GPL-3.0"
homepage = "https://cord.network"
repository = "https://github.com/dhiway/cord"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.5.0", default-features = false, features = [
	"derive",
] }
log = { version = "0.4.17", default-features = false }
static_assertions = "1.1.0"
serde = { version = "1.0.163", default-features = false }


# Local
authority-membership = { package = "cord-authority-membership", path = "./authorities", default-features = false }
cord-primitives = { package = "cord-primitives", path = "../primitives/cord", default-features = false }
network-membership = { package = "network-membership", path = "../primitives/network-membership", default-features = false }
cord-runtime-constants = { package = "cord-runtime-constants", path = "./constants", default-features = false }
cord-utilities = { package = "cord-utilities", path = "../utilities", default-features = false }

pallet-membership = { default-features = false, path = '../pallets/membership/' }
pallet-did = { default-features = false, path = '../pallets/did' }
pallet-did-names = { default-features = false, path = '../pallets/did-name' }
pallet-schema = { default-features = false, path = '../pallets/schema' }
pallet-registry = { default-features = false, path = '../pallets/registry' }
pallet-stream = { default-features = false, path = '../pallets/stream' }
pallet-network-membership = { default-features = false, path = '../pallets/network-membership' }
pallet-runtime-upgrade = { default-features = false, path = '../pallets/runtime-upgrade' }
pallet-collective = { default-features = false, path = '../pallets/collective' }
pallet-identity = { default-features = false, path = '../pallets/identity' }
pallet-offences = { default-features = false, path = '../pallets/offences' }
pallet-unique = { default-features = false, path = "../pallets/unique" }
pallet-node-authorization = { default-features = false, path = "../pallets/node-authorization" }
pallet-scoring = { default-features = false, path = '../pallets/scoring' }

# Internal runtime API (with default disabled)
pallet-did-runtime-api = { package = "pallet-did-runtime-api", path = "../runtime-api/did", default-features = false }
pallet-transaction-weight-runtime-api = { package = "pallet-transaction-weight-runtime-api", path = "../runtime-api/weight", default-features = false }

# Substrate
sp-authority-discovery = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
sp-consensus-babe = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
sp-consensus-grandpa = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
sp-api = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
sp-inherents = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
sp-offchain = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
sp-std = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
sp-runtime = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
sp-staking = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
sp-core = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
sp-io = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
sp-session = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
sp-version = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
sp-transaction-pool = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
sp-block-builder = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }

pallet-staking = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
pallet-authority-discovery = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
pallet-authorship = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
pallet-babe = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
pallet-balances = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
frame-executive = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
pallet-grandpa = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
pallet-im-online = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
pallet-indices = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
pallet-multisig = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
pallet-preimage = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
pallet-scheduler = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
pallet-session = { git = "https://github.com/dhiway/substrate-sdk", features = [
	"historical",
], default-features = false, branch = "release-v1.1.0" }
pallet-sudo = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
frame-support = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
frame-system = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
frame-system-rpc-runtime-api = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
pallet-timestamp = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
pallet-utility = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
pallet-remark = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }
hex-literal = { version = "0.4.1", optional = true }

frame-benchmarking = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, optional = true, branch = "release-v1.1.0" }
frame-system-benchmarking = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, optional = true, branch = "release-v1.1.0" }
# pallet-session-benchmarking = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, optional = true, branch = "release-v1.1.0" }
# pallet-offences-benchmarking = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, optional = true, branch = "release-v1.1.0" }
frame-try-runtime = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, optional = true, branch = "release-v1.1.0" }

[dev-dependencies]
hex-literal = "0.4.1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
keyring = { package = "sp-keyring", git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
separator = "0.4.1"
serde_json = "1.0.96"
rusty-hook = "^0.11.2"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/dhiway/substrate-sdk", optional = true, branch = "release-v1.1.0" }

[features]
default = ['std']
std = [
	"sp-authority-discovery/std",
	"cord-primitives/std",
	"network-membership/std",
	"authority-membership/std",
	"frame-system-benchmarking?/std",
	"cord-utilities/std",
	"codec/std",
	"scale-info/std",
	"serde/std",
	"sp-inherents/std",
	"sp-core/std",
	"sp-api/std",
	"sp-transaction-pool/std",
	"sp-block-builder/std",
	"sp-offchain/std",
	"sp-std/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"frame-executive/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collective/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-multisig/std",
	"pallet-offences/std",
	"pallet-preimage/std",
	"pallet-scheduler/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"pallet-utility/std",
	"pallet-babe/std",
	"pallet-remark/std",
	"pallet-did/std",
	"pallet-did-names/std",
	"pallet-schema/std",
	"pallet-registry/std",
	"pallet-stream/std",
	"pallet-unique/std",
	"pallet-scoring/std",
	"pallet-network-membership/std",
	"pallet-runtime-upgrade/std",
	"pallet-did-runtime-api/std",
	"pallet-node-authorization/std",
	"pallet-transaction-weight-runtime-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"sp-version/std",
	"log/std",
	"sp-consensus-babe/std",
	"sp-consensus-grandpa/std",
	"sp-session/std",
	"cord-runtime-constants/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-offences/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-remark/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"cord-utilities/runtime-benchmarks",
	"pallet-did/runtime-benchmarks",
	"pallet-did-names/runtime-benchmarks",
	"pallet-schema/runtime-benchmarks",
	"pallet-stream/runtime-benchmarks",
	"pallet-unique/runtime-benchmarks",
	"pallet-registry/runtime-benchmarks",
	"pallet-network-membership/runtime-benchmarks",
	"hex-literal",
	"pallet-sudo/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"pallet-scoring/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-schema/try-runtime",
	"pallet-stream/try-runtime",
	"pallet-did/try-runtime",
	"pallet-unique/try-runtime",
	"pallet-scoring/try-runtime",
]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []

# When enabled, the runtime API will not be build.
disable-runtime-api = []

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = ["sp-api/disable-logging"]
