[package]
name = 'cord-runtime'
version.workspace = true
authors.workspace = true
build = 'build.rs'
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.11.1", default-features = false, features = [
	"derive",
	"serde",
] }
log = { workspace = true }
serde = { version = "1.0.197", default-features = false }
serde_json = { features = ["alloc", "arbitrary_precision"], workspace = true }

static_assertions = "1.1.0"
primitive-types = { version = "0.12.0", default-features = false, features = [
	"codec",
	"num-traits",
	"scale-info",
] }

# Local
authority-membership = { package = "cord-authority-membership", path = "./authorities", default-features = false }
cord-primitives = { package = "cord-primitives", path = "../primitives/cord", default-features = false }
identifier = { package = "cord-identifier", path = "../primitives/identifier", default-features = false }
network-membership = { package = "network-membership", path = "../primitives/network-membership", default-features = false }
cord-runtime-constants = { package = "cord-runtime-constants", path = "./constants", default-features = false }

pallet-membership = { default-features = false, path = '../pallets/membership/' }
pallet-did = { default-features = false, path = '../pallets/did' }
pallet-did-name = { default-features = false, path = '../pallets/did-name' }
pallet-schema = { default-features = false, path = '../pallets/schema' }
pallet-chain-space = { default-features = false, path = '../pallets/chain-space' }
pallet-statement = { default-features = false, path = '../pallets/statement' }
pallet-network-membership = { default-features = false, path = '../pallets/network-membership' }
pallet-runtime-upgrade = { default-features = false, path = '../pallets/runtime-upgrade' }
pallet-identity = { default-features = false, path = '../pallets/identity' }
pallet-offences = { default-features = false, path = '../pallets/offences' }
pallet-node-authorization = { default-features = false, path = "../pallets/node-authorization" }
pallet-network-score = { default-features = false, path = '../pallets/network-score' }
pallet-session-benchmarking = { default-features = false, path = '../pallets/session-benchmarking' }
pallet-asset = { default-features = false, path = '../pallets/asset' }

# Internal runtime API (with default disabled)
pallet-did-runtime-api = { package = "pallet-did-runtime-api", path = "./api/did", default-features = false }
pallet-transaction-weight-runtime-api = { package = "pallet-transaction-weight-runtime-api", path = "./api/weight", default-features = false }

# Substrate
sp-authority-discovery = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0", features = [
	"serde",
] }
sp-consensus-babe = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0", features = [
	"serde",
] }
sp-consensus-grandpa = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0", features = [
	"serde",
] }
sp-api = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
sp-inherents = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
sp-offchain = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
sp-std = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
sp-runtime = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0", features = [
	"serde",
] }
sp-staking = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0", features = [
	"serde",
] }
sp-core = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0", features = [
	"serde",
] }
sp-io = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
sp-session = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
sp-storage = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
sp-version = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0", features = [
	"serde",
] }
sp-transaction-pool = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
sp-block-builder = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
sp-genesis-builder = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }

pallet-authority-discovery = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
pallet-authorship = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
pallet-babe = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
pallet-balances = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
pallet-collective = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
frame-executive = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
pallet-grandpa = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
pallet-im-online = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
pallet-indices = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
pallet-multisig = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
pallet-preimage = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
pallet-scheduler = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
pallet-session = { git = "https://github.com/dhiway/substrate-sdk", features = [
	"historical",
], default-features = false, branch = "release-v1.10.0" }
pallet-sudo = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
frame-support = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0", features = [
	"experimental",
	"tuples-96",
] }
frame-system = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
frame-system-rpc-runtime-api = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
pallet-timestamp = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
pallet-utility = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
pallet-remark = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
hex-literal = { version = "0.4.1", optional = true }

frame-benchmarking = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, optional = true, branch = "release-v1.10.0" }
frame-system-benchmarking = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, optional = true, branch = "release-v1.10.0" }
frame-try-runtime = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, optional = true, branch = "release-v1.10.0" }

[dev-dependencies]
sp-staking = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/dhiway/substrate-sdk", optional = true, branch = "release-v1.10.0" }

[features]
default = ['std']
std = [
	"sp-authority-discovery/std",
	"cord-primitives/std",
	"network-membership/std",
	"authority-membership/std",
	"frame-system-benchmarking?/std",
	"codec/std",
	"scale-info/std",
	"serde/std",
	"serde_json/std",
	"identifier/std",
	"sp-inherents/std",
	"sp-core/std",
	"sp-api/std",
	"sp-transaction-pool/std",
	"sp-block-builder/std",
	"sp-offchain/std",
	"sp-std/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"frame-executive/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collective/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-multisig/std",
	"pallet-offences/std",
	"pallet-preimage/std",
	"pallet-scheduler/std",
	"pallet-session-benchmarking/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-utility/std",
	"pallet-babe/std",
	"pallet-remark/std",
	"pallet-did/std",
	"pallet-did-name/std",
	"pallet-schema/std",
	"pallet-chain-space/std",
	"pallet-statement/std",
	"pallet-network-score/std",
	"pallet-asset/std",
	"pallet-network-membership/std",
	"pallet-runtime-upgrade/std",
	"pallet-did-runtime-api/std",
	"pallet-node-authorization/std",
	"pallet-transaction-weight-runtime-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"sp-version/std",
	"log/std",
	"sp-consensus-babe/std",
	"sp-consensus-grandpa/std",
	"sp-genesis-builder/std",
	"sp-session/std",
	"sp-storage/std",
	"cord-runtime-constants/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-offences/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-session-benchmarking/runtime-benchmarks",
	"pallet-session/try-runtime",
	"pallet-remark/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-did/runtime-benchmarks",
	"pallet-did-name/runtime-benchmarks",
	"pallet-schema/runtime-benchmarks",
	"pallet-statement/runtime-benchmarks",
	"pallet-chain-space/runtime-benchmarks",
	"pallet-network-membership/runtime-benchmarks",
	"hex-literal",
	"pallet-sudo/runtime-benchmarks",
	"pallet-network-score/runtime-benchmarks",
	"pallet-asset/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"frame-support/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-session-benchmarking/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-schema/try-runtime",
	"pallet-chain-space/try-runtime",
	"pallet-statement/try-runtime",
	"pallet-did/try-runtime",
	"pallet-did-name/try-runtime",
	"pallet-network-score/try-runtime",
	"pallet-asset/try-runtime",
	"pallet-node-authorization/try-runtime",
	"pallet-network-membership/try-runtime",
	"pallet-runtime-upgrade/try-runtime",
	"pallet-remark/try-runtime",
	"authority-membership/try-runtime",
	"identifier/try-runtime",
]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []

# When enabled, the runtime API will not be build.
disable-runtime-api = []

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = ["sp-api/disable-logging"]
