[package]
name = "cord-test-utils"
description = "CORD testing utilities"
version = "0.9.2-dev"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
substrate-rpc-client = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
assert_cmd = "2.0.10"
nix = "0.26.2"
regex = "1.7.3"
tokio = { version = "1.22.0", features = ["full"] }
cord-primitives = { package = "cord-primitives", path = "../primitives/cord" }
futures = "0.3.30"
