[package]
name = 'cord-utilities'
description = "Shared traits and structs"
version = "0.9.0"
authors = ['Dhiway <info@dhiway.com>', 'BOTLabs GmbH']
edition = '2021'
license = "GPL-3.0"
homepage = "https://cord.network"
repository = "https://github.com/dhiway/cord"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# External dependencies
codec = { default-features = false, features = [
	"derive",
], package = "parity-scale-codec", version = "3.4.0" }
scale-info = { version = "2.10.0", default-features = false, features = [
	"derive",
] }
serde = { version = "1.0.193", features = ["derive"], optional = true }

# Substrate dependencies
frame-support = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.5.0" }
frame-system = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.5.0" }
sp-core = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.5.0" }
sp-runtime = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.5.0" }
sp-std = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.5.0" }
sp-weights = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.5.0" }

[features]
default = ["std"]
mock = []
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-weights/std",
]
try-runtime = ["frame-support/try-runtime"]
