[package]
name = 'cord-utilities'
description = "Shared traits and structs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# External dependencies
codec = { default-features = false, features = [
	"derive",
], package = "parity-scale-codec", version = "3.4.0" }
scale-info = { version = "2.11.1", default-features = false, features = [
	"derive",
] }
serde = { version = "1.0.197", features = ["derive"], optional = true }
log = "0.4.17"

# Substrate dependencies
frame-support = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
frame-system = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
sp-core = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
sp-runtime = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
sp-std = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }
sp-weights = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.10.0" }

[features]
default = ["std"]
mock = []
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-weights/std",
]
try-runtime = ["frame-support/try-runtime"]
