[package]
name = "cord-loom-node-cli"
description = "CORD Relay-chain Client Node"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on Linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = { workspace = true }
clap = { features = ["derive"], optional = true, workspace = true }
log = { workspace = true, default-features = true }
thiserror = { workspace = true }
futures = { workspace = true }
pyroscope = { optional = true, workspace = true }
pyroscope_pprofrs = { optional = true, workspace = true }
cord-primitives = { features = ["std"], workspace = true }
cord-loom-service = { optional = true, workspace = true }
sp-core.workspace = true
sp-core.default-features = true
sp-io.workspace = true
sp-io.default-features = true
sp-keyring.workspace = true
sp-keyring.default-features = true
sp-maybe-compressed-blob.workspace = true
sp-maybe-compressed-blob.default-features = true
frame-benchmarking-cli = { optional = true, workspace = true, default-features = true }
sc-cli = { optional = true, workspace = true, default-features = true }
sc-service = { optional = true, workspace = true, default-features = true }
polkadot-node-metrics.workspace = true
polkadot-node-metrics.default-features = true
polkadot-node-primitives.workspace = true
polkadot-node-primitives.default-features = true
sc-tracing = { optional = true, workspace = true, default-features = true }
sc-sysinfo.workspace = true
sc-sysinfo.default-features = true
sc-executor.workspace = true
sc-executor.default-features = true
sc-storage-monitor.workspace = true
sc-storage-monitor.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true

[build-dependencies]
substrate-build-script-utils.workspace = true
substrate-build-script-utils.default-features = true

[features]
default = ["cli", "db", "full-node"]
db = ["cord-loom-service/db"]
metadata-hash = ["cord-loom-service/metadata-hash"]
service = ["dep:cord-loom-service"]
cli = [
    "clap",
    "frame-benchmarking-cli",
    "sc-cli",
    "sc-service",
    "sc-tracing",
    "service",
]
runtime-benchmarks = [
    "frame-benchmarking-cli?/runtime-benchmarks",
    "polkadot-node-metrics/runtime-benchmarks",
    "cord-loom-service?/runtime-benchmarks",
    "sc-service?/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
full-node = ["cord-loom-service/full-node"]
try-runtime = ["cord-loom-service?/try-runtime", "sp-runtime/try-runtime"]
fast-runtime = ["cord-loom-service/fast-runtime"]
pyroscope = ["dep:pyroscope", "pyroscope_pprofrs"]

# Configure the native runtimes to use.
loom-native = ["cord-loom-service/loom-native"]

malus = ["full-node", "cord-loom-service/malus"]
runtime-metrics = [
    "polkadot-node-metrics/runtime-metrics",
    "cord-loom-service/runtime-metrics",
]
